[backend] feat(chaining): add workflow scope configuration (#4824)
Co-authored-by: Camille Roux <camille.roux@filigran.io>